--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
-MONGO_URI=mongodb://localhost:27017/vigilancia
+MONGO_URI=mongodb+srv://Felps:123@clusterfe.ze2ocxd.mongodb.net/seuBanco?authSource=admin&retryWrites=true&w=majority
+
+
+
 PORT=5000
 JWT_SECRET=123
