--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://Felps:123@clusterfe.ze2ocxd.mongodb.net/seuBanco?authSource=admin&retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://Felps:123@clusterfe.ze2ocxd.mongodb.net/sgsgroup?authSource=admin&retryWrites=true&w=majority
 
 
 
